Opened 13 years ago
Closed 13 years ago
#7953 closed bug (fixed)
[LaunchBox] missing newlines in error message (patch)
Reported by: | diver | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/LaunchBox | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (3)
Change History (13)
by , 13 years ago
Attachment: | LaunchBox_before.png added |
---|
by , 13 years ago
Attachment: | LaunchBox_after.png added |
---|
by , 13 years ago
Attachment: | launchbox.diff added |
---|
comment:1 by , 13 years ago
patch: | 0 → 1 |
---|
comment:2 by , 13 years ago
Description: | modified (diff) |
---|
comment:3 by , 13 years ago
comment:4 by , 13 years ago
AFAIU at first LaunchBox tries to launch file by path and if it fails it tries to launch by signature. If both path and signature changed this error messages would be different.
comment:6 by , 13 years ago
Oh, sorry. Now I get it. I was missing that these were two distinct error messages in one dialog. (Even though I wrote the original code...)
Yes it would be nice to know which library is missing. IIRC, Tracker has some code to obtain this information, but I am almost sure it doesn't work. At least I remember only getting "Missing library" from Tracker as well and launching the failing app from the Terminal to find out which library. (But Terminal doesn't do anything, it just happens to show the runtime_loader error output.)
comment:8 by , 13 years ago
Indeed, IIRC I have implemented that years ago. What still doesn't work AFAIK, and what probably misled stippi's memory was showing missing symbols when all libraries are there.
comment:10 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Applied patch with hrev42902. Should've waited for BeGeistert's patch hour to have a shot at applying one for that, too... :)
If the screen shots are up to date, please remove the second instance of "Error: Missing library" at the bottom of the alert. Thanks!