Applied patch inserting newlines in error message. Closes #7953. Thanks diver.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42902 a95241bf-73f2-0310-859d-f6bbb57e9c96