src/apps/launchbox/MainWindow.cpp
@@ -141,7 +141,7 @@ MainWindow::MessageReceived(BMessage* message)
 					status_t ret = be_roster->Launch(button->Ref());
 					if (ret < B_OK && ret != B_ALREADY_RUNNING) {
 						BString errStr(B_TRANSLATE("Failed to launch '%1'.\n"
-							"\nError: "));
+							"\nError:"));
 						BPath path(button->Ref());
 						if (path.InitCheck() >= B_OK)
 							errStr.ReplaceFirst("%1", path.Path());
@@ -156,8 +156,8 @@ MainWindow::MessageReceived(BMessage* message)
 			if (!launchedByRef && button->AppSignature()) {
 				status_t ret = be_roster->Launch(button->AppSignature());
 				if (ret != B_OK && ret != B_ALREADY_RUNNING) {
-					BString errStr(B_TRANSLATE("Failed to launch application "
-						"with signature '%2'.\n\nError: "));
+					BString errStr(B_TRANSLATE("\n\nFailed to launch application "
+						"with signature '%2'.\n\nError:"));
 					errStr.ReplaceFirst("%2", button->AppSignature());
 					errorMessage << errStr.String() << " ";
 					errorMessage << strerror(ret);
